# shi2-d2

./: .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/shi2d2_model/share/shi2d2_model/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/shi2d2_model/share/shi2d2_model/cmake/: shi2d2_modelConfig-version.cmake  shi2d2_modelConfig.cmake
install/shi2d2_model/share/shi2d2_model/config/: diff_drive_config.yaml  joint_names_shi2d2_model.yaml  ros_gz_bridge_config.yaml  shi2d2_controller.yaml  test_controller.yaml
install/shi2d2_model/share/shi2d2_model/environment/: ament_prefix_path.dsv  path.dsv
install/shi2d2_model/share/shi2d2_model/launch/: car.launch.py  display.launch  gazebo.launch  gazebo.launch.py  gazebo_classic.launch.py  gpt_gazebo.launch.py  gpt_rviz.launch.py  harvey_gazebo.launch.py  rviz.launch.py  rviz_launch.py  test.py
install/shi2d2_model/share/shi2d2_model/meshes/: body_link.STL  head_link.STL  left_foot_link.STL  left_lower_hip_link.STL  left_lower_leg_link.STL  left_upper_hip_link.STL  left_upper_leg_link.STL  lower_neck_link.STL  right_foot_link.STL  right_lower_hip_link.STL  right_lower_leg_link.STL  right_upper_hip_link.STL  right_upper_leg_link.STL  robot_base.stl  upper_neck_link.STL
install/shi2d2_model/share/shi2d2_model/rviz/: diff_drive.rviz  rviz_basic_settings.rviz  rviz_settings.rviz  rviz_settings_2.rviz  shi2d2_rviz_settings.rviz  urdf_gazebo_config.rviz
install/shi2d2_model/share/shi2d2_model/sdf/: car.sdf  car_model.config  car_model.sdf  model.config  model.sdf  rrobot.sdf  shi2d2_model.sdf  test.sdf
install/shi2d2_model/share/shi2d2_model/urdf/: dum.urdf  dummy.urdf  shi2d2_model.csv  shi2d2_model.urdf  shi2d2_model.urdf.xacro  shi2d2_model.xacro  shi2d2_model.xacro.urdf  shi2d2_model_gazebo.urdf  shi2d2_model_og.urdf  shi2d2_model_xacro_nonsense.urdf  test.urdf  test_control.urdf.xacro
install/shi2d2_model/share/shi2d2_model/urdf/gazebo/: shi2d2_gazebo_colors.xacro  shi2d2_gazebo_plugins.xacro  shi2d2_ros2_control.xacro
install/shi2d2_model/share/shi2d2_model/worlds/: blank.world  cafe.world  car.world  car_world.sdf  diff_drive.sdf  empty.world  farm.world  neighborhood.world
log/: latest_build  latest_list
resources/: plan.md  shi2-d2-limb-inertia-estimates.mcdx
shi2d2_teleop/: package.xml
shi2d2_teleop/include/shi2d2_teleop/: teleop.hpp
shi2d2_teleop/src/: keyboard_teleop.cpp
src/install/: local_setup.sh  setup.sh
src/install/shi2d2_model/share/shi2d2_model/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/log/: latest_build
src/shi2d2_controller/: CMakeLists.txt  package.xml
src/shi2d2_controller/include/shi2d2_controller/: shi2d2_controller.hpp
src/shi2d2_controller/src/: head_controller.cpp  left_leg_controller.cpp  leg_controller.cpp  leg_ik_controller.cpp  right_leg_controller.cpp  tf_publisher.cpp
src/shi2d2_interfaces/: CMakeLists.txt  package.xml
src/shi2d2_interfaces/msg/: FootPose.msg  LegJointAngles.msg
src/shi2d2_left_leg_group_ikfast_plugin/: CMakeLists.txt  package.xml  update_ikfast_plugin.sh
src/shi2d2_left_leg_group_ikfast_plugin/src/: shi2d2_left_leg_group_ikfast_solver.cpp
src/shi2d2_leg_group_ikfast_plugin/: CMakeLists.txt  package.xml  shi2d2_leg_group_moveit_ikfast_plugin_description.xml
src/shi2d2_leg_group_ikfast_plugin/include/shi2d2_leg_group_ikfast_plugin/: ikfast.h
src/shi2d2_leg_group_ikfast_plugin/src/: shi2d2_left_leg_group_ikfast_moveit_plugin.cpp  shi2d2_left_leg_group_ikfast_solver.cpp
src/shi2d2_model/: CMakeLists.txt  package.xml
src/shi2d2_model/config/: diff_drive_config.yaml  joint_names_shi2d2_model.yaml  ros_gz_bridge_config.yaml  shi2d2_controller (deprecated).yaml  shi2d2_controller.yaml
src/shi2d2_model/launch/: car.launch.py  gazebo.launch  gazebo.launch.py  gazebo.launch_bsdf.py  gazebo.launch_csdf.py  gpt_gazebo.launch.py  rviz.launch.py
src/shi2d2_model/meshes/: body_link.STL  head_link.STL  left_foot_link.STL  left_lower_leg_link.STL  left_upper_leg_link.STL  right_foot_link.STL
src/shi2d2_model/rviz/: diff_drive.rviz  rviz_settings_2.rviz  shi2d2_rviz_settings.rviz
src/shi2d2_model/sdf/: shi2d2_model.sdf  test.sdf
src/shi2d2_model/urdf/: dummy.urdf  shi2d2_model.csv  shi2d2_model.urdf.xacro  shi2d2_model.xacro_bsdf.urdf  shi2d2_model_ik.urdf  shi2d2_model_og.urdf  shi2d2_model_sw_export.urdf
src/shi2d2_model/worlds/: blank.world  diff_drive.sdf
src/shi2d2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/shi2d2_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml  shi2d2.ros2_control.xacro  shi2d2.srdf  shi2d2.urdf.xacro
src/shi2d2_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  (+5 more)
src/shi2d2_planner/: CMakeLists.txt  package.xml
src/shi2d2_planner/debug_data/: data_no_feedback.txt  data_with_feedback.txt  data_with_feedback_zmp_0.txt  footsteps_no_feedback.txt  footsteps_with_feedback.txt  full_data_fake_feedback.txt  full_data_fake_feedback2.txt  full_data_fake_feedback3.txt  full_data_no_feedback.txt  full_data_no_feedback2.txt  full_data_with_feedback.txt  full_data_with_feedback2.txt  full_data_with_feedback3.txt  full_data_with_feedback4.txt  jerk_data_no_feedback.txt  jerk_data_with_feedback.txt  matrices_no_feedback_n10.txt  matrices_with_feedback_n10.txt  stationary_data_with_feedback.txt
src/shi2d2_planner/include/shi2d2_planner/: shi2d2_planner.hpp
src/shi2d2_planner/src/: locomotion_planner.cpp  test.py
src/shi2d2_right_leg_group_ikfast_plugin/: CMakeLists.txt  package.xml  shi2d2_right_leg_group_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
src/shi2d2_right_leg_group_ikfast_plugin/src/: shi2d2_right_leg_group_ikfast_moveit_plugin.cpp  shi2d2_right_leg_group_ikfast_solver.cpp
src/shi2d2_teleop/: CMakeLists.txt
(+32 files in other folders)
