<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shi2d2_model</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for shi2d2_model</p>
    <p>This package contains configuration data, 3D models and launch files
for shi2d2_model robot</p>
  </description>
  <author>Michael Lu</author>
  <maintainer email="mlu0708@mit.edu" />
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>